--- a/my-app/src/components/Tabs/Tabs.scss
+++ b/my-app/src/components/Tabs/Tabs.scss
@@ -3,6 +3,7 @@
     column-gap: 24px;
     border-bottom: 1px solid #DADADA;
     padding-bottom: 24px;
+    padding-left: 0;
     font-weight: 600;
     line-height: 24px;
 }
